# esp32c6-no-std-ble

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
